# daq_tools

./: .gitignore  LICENSE  pyproject.toml
scripts/: benchmark.py
src/daq_tools/: __init__.py  streaming_parquet.py
tests/: test_streaming_parquet.py
